Changed Website Test

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <h1>Welcome to Intellipaat Hello World</h1>
+<h2>These changes are being deployed automatically</h2>
 </body>
 </html>
