--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
 <h1>Welcome to Intellipaat Hello World</h1>
 <h2>These changes are being deployed automatically</h2>
+<h2>These are more changes that I just added</h2>
 </body>
 </html>
